<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TopCutActivity">

    <FrameLayout
        android:id="@+id/layoutJugadores"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:translationZ="100dp" />

    <LinearLayout
        android:id="@+id/layoutBracket"
        android:layout_width="match_parent"
        android:layout_height="375dp"
        android:background="#FFFFFF"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/layoutEnf"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical"
            tools:ignore="NestedWeights">

            <LinearLayout
                android:id="@+id/layoutJ1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_jug1"
                    android:layout_width="75dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="2"
                    android:background="#0000FF"
                    android:gravity="center" />

                <EditText
                    android:id="@+id/et_res_jug1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/r"
                    android:inputType="number"
                    android:minHeight="48dp"
                    android:textColor="#000000"
                    android:textColorHint="#78909C"
                    tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

                <ImageView
                    android:id="@+id/img_bru"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:contentDescription="@string/img_br"
                    app:srcCompat="@drawable/img_bru" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutJ2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_jug2"
                    android:layout_width="75dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="2"
                    android:background="#FF0000"
                    android:gravity="center" />

                <EditText
                    android:id="@+id/et_res_jug2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/r"
                    android:inputType="number"
                    android:minHeight="48dp"
                    android:textColor="#000000"
                    android:textColorHint="#78909C"
                    tools:ignore="TouchTargetSizeCheck" />

                <ImageView
                    android:id="@+id/img_brd"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:contentDescription="@string/img_br"
                    app:srcCompat="@drawable/img_brd" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/bt_sig"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/siguiente" />

    </LinearLayout>

</FrameLayout>